# data_exploration

./: .buildinfo  AllReport.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: static.yml
_modules/: index.html
_modules/pydata/cli/: main.html
_modules/pydata/dash/: app.html  jupyter.html  theme.html
_modules/pydata/utils/: importer.html  loader.html  logger.html  transformer.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/pydata/: index.rst.txt
_sources/autoapi/pydata/__pycache__/: index.rst.txt
_sources/autoapi/pydata/cli/: index.rst.txt
_sources/autoapi/pydata/dash/: index.rst.txt
autoapi/: index.html
autoapi/pydata/: index.html
autoapi/pydata/__pycache__/: index.html
autoapi/pydata/cli/: index.html
autoapi/pydata/dash/: index.html
autoapi/pydata/utils/: index.html
data/: cleaned_ev_charge_data.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/exploration/jupymodule/: arguments.json  dataFrameMaker.ipynb
docs/report/: Generated_report_35897499.html
exploration/: AllReport.ipynb  UserReport.ipynb
exploration/jupymodule/: DataFrameMaker.ipynb  Visualiser.ipynb  arguments.json
src/pydata/: __init__.py
src/pydata/cli/: main.py
src/pydata/dash/: app.py  jupyter.py  report.py  theme.py  visualiser.py
src/pydata/utils/: __init__.py  importer.py  loader.py  logger.py  transformer.py
tests/: test_pydata.py
(+24 files in other folders)
